Add a function for secret code typed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 </head>
 <body>
   <p><em>Have a look at the JavaScript Console</em></p>
-  <script src="./js/functional.js"></script>
+  <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
+  <script type="text/javascript" src="./js/functional.js"></script>
 </body>
 </html>
