add inner and outer elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 </head>
 <body>
+  <div id="outer" style="width: 100px; height: 100px; background-color: green ">
+      <div id="inner" style="width: 35px; height: 35px; background-color: yellow "></div>
+  </div>
   <p><em>Have a look at the JavaScript Console</em></p>
   <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
   <script type="text/javascript" src="./js/functional.js"></script>
